# pkg/cases/handler.go
@@ -8,31 +8,31 @@ import (
 type CaseHandler struct {
 }
 
-// @Summary Get the lastest case ID
+// @Summary Get the lastest case
 // @Description
 // @Tags Case
 // @Produce json
-// @Param patientID path uint true "patient ID"
-// @Success 200 {integer} api.ReturnedData{data=uint}
-// @Router /{patientid}/case [GET]
-func (h *CaseHandler) GetLastCaseID(c echo.Context) error {
+// @Param patientID body Case true "patient ID"
+// @Success 200 {object} api.ReturnedData{data=Case}
+// @Router /patient/{patientID}/case [GET]
+func (h *CaseHandler) GetLastCase(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
-	return c.JSON(200, api.Return("GetLastCaseID", nil))
+	return c.JSON(200, api.Return("GetLastCase", nil))
 }
 
-// @Summary Get a case ID list
+// @Summary Get a case ID list by patient ID
 // @Description
 // @Tags Case
 // @Produce json
 // @Param patientID path uint true "patient ID"
-// @Param department path string false "department name" nil
+// @Param department query string false "department name" nil
 // @Success 200 {array} api.ReturnedData{data=[]uint}
-// @Router /{patientid}/case/department [GET]
-func (h *CaseHandler) GetCaseIDList(c echo.Context) error {
+// @Router /patient/{patientID} [GET]
+func (h *CaseHandler) GetCasesByPatientID(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
-	return c.JSON(200, api.Return("GetCaseIDList", nil))
+	return c.JSON(200, api.Return("GetCasesByPatientID", nil))
 }
 
 // @Summary New a case
@@ -40,52 +40,38 @@ func (h *CaseHandler) GetCaseIDList(c echo.Context) error {
 // @Tags Case
 // @Produce json
 // @Param caseDetail body Case true "patient ID, doctor ID, department name and other case details"
-// @Success 200 {object} api.ReturnedData{}
-// @Router /case [POST]
+// @Success 200 {object} api.ReturnedData{data=Case}
+// @Router /patient/{patientID}/case [POST]
 func (h *CaseHandler) NewCase(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
 	return c.JSON(200, api.Return("NewCase", nil))
 }
 
-// @Summary Get case by a case-id list
+// @Summary Delete a case
 // @Description
 // @Tags Case
 // @Produce json
-// @Param caseIDList query []uint true "case IDs"
-// @Success 200 {object} api.ReturnedData{data=[]Case}
-// @Router /case/{caseid} [GET]
-func (h *CaseHandler) GetCaseInOneList(c echo.Context) error {
-	// what is in here does not matter for now, just filling the swaggo comments and name the function
+// @Param caseID path uint true "case ID"
+// @Success 200 {object} api.ReturnedData{}
+// @Router /patient/{patientID}/case/{caseID} [DELETE]
+func (h *CaseHandler) DeleteCaseByCaseID(c echo.Context) error {
+	// ...
 	c.Logger().Debug("hello world")
-	return c.JSON(200, api.Return("GetCaseInOneList", nil))
+	return c.JSON(200, api.Return("DeleteCaseByCaseID", nil))
 }
 
-// @Summary Get prevoius cases by current case ID
+// @Summary Get prevoius cases
 // @Description
 // @Tags Case
 // @Produce json
 // @Param caseID path uint true "current case ID"
 // @Success 200 {object} api.ReturnedData{data=[]Case}
-// @Router /case/{currentcaseid} [GET]
-func (h *CaseHandler) GetPreviousCaseByID(c echo.Context) error {
+// @Router /patient/{patientID}/case/{caseID} [GET]
+func (h *CaseHandler) GetPreviousCases(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
-	return c.JSON(200, api.Return("GetPreviousCaseByID", nil))
-}
-
-// @Summary Get lastest case by department name
-// @Description
-// @Tags Case
-// @Produce json
-// @Param patientID path uint true "patient ID"
-// @Param  department path string true "department name"
-// @Success 200 {object} api.ReturnedData{data=Case}
-// @Router /case/department [GET]
-func (h *CaseHandler) GetPreviousCaseByDepartment(c echo.Context) error {
-	// ...
-	c.Logger().Debug("hello world")
-	return c.JSON(200, api.Return("GetPreviousCaseByDepartment", nil))
+	return c.JSON(200, api.Return("GetPreviousCases", nil))
 }
 
 // @Summary Update case
@@ -94,7 +80,7 @@ func (h *CaseHandler) GetPreviousCaseByDepartment(c echo.Context) error {
 // @Produce json
 // @Param caseDetail body string true "case ID and updated details"
 // @Success 200 {object} api.ReturnedData{data=Case}
-// @Router /case/{caseid} [PUT]
+// @Router /patient/{patientID}/case/{caseID} [PUT]
 func (h *CaseHandler) UpdateCase(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
@@ -107,11 +93,37 @@ func (h *CaseHandler) UpdateCase(c echo.Context) error {
 // @Produce json
 // @Param prescriptionDetail body string true "case ID and prescription details"
 // @Success 200 {object} api.ReturnedData{data=Prescription}
-// @Router /case/{caseid}/prescription [POST]
+// @Router /patient/{patientID}/case/{caseID}/prescription [POST]
 func (h *CaseHandler) NewPrescription(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
 	return c.JSON(200, api.Return("NewPrescription", nil))
+}
+
+// @Summary Delete a prescrition
+// @Description
+// @Tags Case
+// @Produce json
+// @Param prescriptionID path uint true "prescription ID"
+// @Success 200 {object} api.ReturnedData{}
+// @Router /patient/{patientID}/case/{caseID}/prescription/{prescriptionID} [DELETE]
+func (h *CaseHandler) DeletePrescription(c echo.Context) error {
+	// ...
+	c.Logger().Debug("hello world")
+	return c.JSON(200, api.Return("DeletePrescription", nil))
+}
+
+// @Summary Update a prescrition
+// @Description
+// @Tags Case
+// @Produce json
+// @Param prescriptionDetails body uint true "prescription ID and updated details"
+// @Success 200 {object} api.ReturnedData{}
+// @Router /patient/{patientID}/case/{caseID}/prescription/{prescriptionID} [PUT]
+func (h *CaseHandler) UpdatePrescription(c echo.Context) error {
+	// ...
+	c.Logger().Debug("hello world")
+	return c.JSON(200, api.Return("UpdatePrescription", nil))
 }
 
 // @Summary Get prescription by prescription id
@@ -120,7 +132,7 @@ func (h *CaseHandler) NewPrescription(c echo.Context) error {
 // @Produce json
 // @Param prescriptionID path uint true "prescription ID"
 // @Success 200 {object} api.ReturnedData{data=Prescription}
-// @Router /case/{caseid}/prescription/{prescriptionid}  [GET]
+// @Router /patient/{patientID}/case/{caseID}/prescription/{prescriptionID}  [GET]
 func (h *CaseHandler) GetPrescriptionByPrescriptionID(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
@@ -133,7 +145,7 @@ func (h *CaseHandler) GetPrescriptionByPrescriptionID(c echo.Context) error {
 // @Produce json
 // @Param caseID path uint true "case ID"
 // @Success 200 {object} api.ReturnedData{data=[]Prescription}
-// @Router /case/{caseid}/prescription  [GET]
+// @Router /patient/{patientID}/case/{caseID}/prescription  [GET]
 func (h *CaseHandler) GetPrescriptionByCaseID(c echo.Context) error {
 	// ...
 	c.Logger().Debug("hello world")
